# Complete_VoiceAgent

./: .env.example  README.md  pyproject.toml
src/voice_agent/: __init__.py  config.py  main.py  schemas.py
src/voice_agent/api/: webhooks.py
src/voice_agent/handlers/: ai.py  voice.py
src/voice_agent/integrations/: chatwoot.py  shopify.py  twilio.py
src/voice_agent/knowledge/: loader.py  product_knowledge.json
